--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,11 +7,14 @@
   padding: 10px;
   background-color: #3f3f3f;
 }
+.item {
+  margin: 10px 10px 10px 20px;
+}
 
 .item a {
   color: #fff;
   font-size: 24px;
-  margin: 10px;
+
   text-decoration: none;
 }
 
@@ -22,4 +25,9 @@
 
 .item a.activeLink {
   color: #f2ff42;
+}
+
+.item img {
+  width: 20px;
+  margin: 0 10px 0 0;
 }
