--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -1,5 +1,17 @@
 .message {
   font-size: 18px;
   color: #000000;
-  padding: 20px;
+  padding: 10px 0 0 10px;
+}
+
+.date {
+  text-align: right;
+  color: #636464;
+  margin: 0;
+  padding: 0;
+}
+
+.dataHour {
+  font-size: 12px;
+  padding-right: 10px;
 }
