--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,24 @@
 body {
-  background-color: #666b83;
+  background-color: #d1d1d1;
 }
 
 .app-wrapper {
   display: grid;
 
   margin: 0 auto;
-  width: 1600px;
+  width: 800px;
 
   grid-template-areas:
     "head head"
     "nav cont";
 
   grid-template-rows: 100px 1fr;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 5px;
+  grid-template-columns: 2fr 5fr;
+  grid-gap: 2px;
 }
 
 .body {
-  background-color: #666b83;
+  background-color: #bbbbbb;
 }
 
 .app-wrapper-content {
