--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,6 +1,6 @@
 .dialogs {
   display: grid;
-  grid-template-columns: 2fr 5fr;
+  grid-template-columns: 1fr 5fr;
 }
 
 .messages {
@@ -14,6 +14,7 @@
 
 .textarea {
   margin: 5px;
+  width: 400px;
 }
 
 .button_send {
